--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="102" id="KGk-i7-Jjw" customClass="MessageCell" customModule="Flash_Chat_iOS13" customModuleProvider="target">
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="102" id="KGk-i7-Jjw" customClass="MessageCell" customModule="Flash_Chat_iOS13" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="412" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,12 +21,20 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="Vye-Rs-5kU">
                         <rect key="frame" x="20" y="20" width="372" height="62"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="nEK-go-Xl3" userLabel="YouAvatar ">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <accessibility key="accessibilityConfiguration" identifier="I"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="M3n-qS-Dpi"/>
+                                    <constraint firstAttribute="height" constant="40" id="v2D-fI-ce1"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2a-zn-gi0" userLabel="Message Bubble">
-                                <rect key="frame" x="0.0" y="0.0" width="306" height="62"/>
+                                <rect key="frame" x="66" y="0.0" width="240" height="62"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="gfsdfsdfsfsfsfsfsfsfsfsfsfsfsfsffsfsfs sfsfs  fsfs fsfs fs sf sfsfsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22X-D1-py6">
-                                        <rect key="frame" x="10" y="7" width="286" height="48"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <rect key="frame" x="10" y="7" width="220" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -39,11 +47,11 @@
                                     <constraint firstItem="22X-D1-py6" firstAttribute="leading" secondItem="k2a-zn-gi0" secondAttribute="leading" constant="10" id="j5U-bI-FIr"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="nEK-go-Xl3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="IfC-je-M3I">
                                 <rect key="frame" x="332" y="0.0" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="M3n-qS-Dpi"/>
-                                    <constraint firstAttribute="height" constant="40" id="v2D-fI-ce1"/>
+                                    <constraint firstAttribute="width" constant="40" id="3ed-7x-VNM"/>
+                                    <constraint firstAttribute="height" constant="40" id="wyv-2m-PpA"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -58,7 +66,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imageCell" destination="nEK-go-Xl3" id="Bqt-Aq-uYK"/>
+                <outlet property="LeftImage" destination="nEK-go-Xl3" id="EEe-W2-Zro"/>
+                <outlet property="RightImage" destination="IfC-je-M3I" id="Qcp-my-20V"/>
                 <outlet property="labelCell" destination="22X-D1-py6" id="pRA-1N-8b2"/>
                 <outlet property="messageBubble" destination="k2a-zn-gi0" id="Hbv-3w-l7J"/>
             </connections>
@@ -67,6 +76,7 @@
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
